--- a/Meissa.Core.Model/Meissa.Core.Model.csproj
+++ b/Meissa.Core.Model/Meissa.Core.Model.csproj
@@ -3,12 +3,14 @@
   <PropertyGroup>
       <TargetFramework>netcoreapp3.1</TargetFramework>
       <LangVersion>8.0</LangVersion>
+    
   </PropertyGroup>
   
     <Import Project="..\SharedAssemblyInfo.targets" />
   
   <PropertyGroup>
     <CodeAnalysisRuleSet>..\StyleCopeRules.ruleset</CodeAnalysisRuleSet>
+      <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
